@@ -101,7 +101,11 @@ public class BinInterSedes implements InterSedes {
     public static final byte PBOOL_TUPLE = 33;
     public static final byte PRIMITIVE_TUPLE = 34;
 
-
+    public static final byte LONG_INBYTE = 35;
+    public static final byte LONG_INSHORT = 36;
+    public static final byte LONG_ININT = 37;
+    public static final byte LONG_0 = 38;
+    public static final byte LONG_1 = 39;
 
     private static TupleFactory mTupleFactory = TupleFactory.getInstance();
     private static BagFactory mBagFactory = BagFactory.getInstance();
@@ -309,6 +313,16 @@ public class BinInterSedes implements InterSedes {
         case INTEGER:
             return Integer.valueOf(in.readInt());
 
+        case LONG_0:
+            return Long.valueOf(0);
+        case LONG_1:
+            return Long.valueOf(1);
+        case LONG_INBYTE:
+            return Long.valueOf(in.readByte());
+        case LONG_INSHORT:
+            return Long.valueOf(in.readShort());
+        case LONG_ININT:
+            return Long.valueOf(in.readInt());
         case LONG:
             return Long.valueOf(in.readLong());
 
@@ -444,12 +458,27 @@ public class BinInterSedes implements InterSedes {
                 out.writeByte(INTEGER);
                 out.writeInt(i);
             }
-
             break;
 
         case DataType.LONG:
+            long lng = (Long) val;
+            if (lng == 0) {
+                out.writeByte(LONG_0);
+            } else if (lng == 1) {
+                out.writeByte(LONG_1);
+            } else if (Byte.MIN_VALUE <= lng && lng <= Byte.MAX_VALUE) {
+                out.writeByte(LONG_INBYTE);
+                out.writeByte((int)lng);
+            } else if (Short.MIN_VALUE <= lng && lng <= Short.MAX_VALUE) {
+                out.writeByte(LONG_INSHORT);
+                out.writeShort((int)lng);
+            } else if (Integer.MIN_VALUE <= lng && lng <= Integer.MAX_VALUE) {
+                out.writeByte(LONG_ININT);
+                out.writeInt((int)lng);
+            } else {
             out.writeByte(LONG);
-            out.writeLong((Long) val);
+                out.writeLong(lng);
+            }
             break;
 
         case DataType.FLOAT:
@@ -794,12 +823,17 @@ public class BinInterSedes implements InterSedes {
                 }
                 break;
             }
+            case BinInterSedes.LONG_0:
+            case BinInterSedes.LONG_1:
+            case BinInterSedes.LONG_INBYTE:
+            case BinInterSedes.LONG_INSHORT:
+            case BinInterSedes.LONG_ININT:
             case BinInterSedes.LONG: {
                 type1 = DataType.LONG;
                 type2 = getGeneralizedDataType(dt2);
                 if (type1 == type2) {
-                    long lv1 = bb1.getLong();
-                    long lv2 = bb2.getLong();
+                    long lv1 = readLong(bb1, dt1);
+                    long lv2 = readLong(bb2, dt2);
                     rc = (lv1 < lv2 ? -1 : (lv1 == lv2 ? 0 : 1));
                 }
                 break;
@@ -1086,6 +1120,11 @@ public class BinInterSedes implements InterSedes {
             case BinInterSedes.INTEGER_INSHORT:
             case BinInterSedes.INTEGER:
                 return DataType.INTEGER;
+            case BinInterSedes.LONG_0:
+            case BinInterSedes.LONG_1:
+            case BinInterSedes.LONG_INBYTE:
+            case BinInterSedes.LONG_INSHORT:
+            case BinInterSedes.LONG_ININT:
             case BinInterSedes.LONG:
                 return DataType.LONG;
             case BinInterSedes.FLOAT:
@@ -1115,6 +1154,20 @@ public class BinInterSedes implements InterSedes {
                 return DataType.INTERNALMAP;
             case BinInterSedes.GENERIC_WRITABLECOMPARABLE:
                 return DataType.GENERIC_WRITABLECOMPARABLE;
+            default:
+                throw new RuntimeException("Unexpected data type " + type + " found in stream.");
+            }
+        }
+
+        private static long readLong(ByteBuffer bb, byte type) {
+            int bytesToRead = 0;
+            switch (type) {
+            case BinInterSedes.LONG_0: return 0L;
+            case BinInterSedes.LONG_1: return 1L;
+            case BinInterSedes.LONG_INBYTE: return bb.get();
+            case BinInterSedes.LONG_INSHORT: return bb.getShort();
+            case BinInterSedes.LONG_ININT: return bb.getInt();
+            case BinInterSedes.LONG: return bb.getLong();
             default:
                 throw new RuntimeException("Unexpected data type " + type + " found in stream.");
             }
